getByIdMeasureType function and test
