# internal/measureunit/app/command/createMeasureType.go
@@ -11,8 +11,7 @@ import (
 )
 
 type CreateMeasureType struct {
-	Name  string `json:"name" validate:"required,max=10"`
-	Name2 string `json:"name2" validate:"required,max=10"`
+	Name string `json:"name" validate:"required,max=10"`
 }
 
 type CreateMeasureTypeHandler struct {
@@ -21,7 +20,7 @@ type CreateMeasureTypeHandler struct {
 
 func NewCreateMeasureTypeHandler(repo measuretype.Repository) CreateMeasureTypeHandler {
 	if repo == nil {
-		panic("nil repo")
+		panic("nil repo measuretype")
 	}
 
 	return CreateMeasureTypeHandler{repo: repo}
