# internal/measureunit/ports/response/measureTypeResponse.go
@@ -1,0 +1,6 @@
+package response
+
+type MeasureTypeResponse struct {
+	Id   string `json:"id"`
+	Name string `json:"name"`
+}
